--- a/MovieBuff/Base.lproj/Main.storyboard
+++ b/MovieBuff/Base.lproj/Main.storyboard
@@ -21,9 +21,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="226" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rPj-rj-ZY1">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="226" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rPj-rj-ZY1">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="226" id="Zmm-dH-Qsa" customClass="TableViewCell">
@@ -33,9 +32,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="226"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kpu-gQ-8yF">
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kpu-gQ-8yF">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="226"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6zk-zq-LOs">
                                                         <size key="itemSize" width="283" height="201"/>
@@ -51,19 +49,27 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="283" height="201"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HJV-1j-l5j">
+                                                                    <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HJV-1j-l5j">
                                                                         <rect key="frame" x="0.0" y="29" width="283" height="172"/>
-                                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     </imageView>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wmp-m0-0IT">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wmp-m0-0IT">
                                                                         <rect key="frame" x="0.0" y="-11" width="283" height="41"/>
-                                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="16"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                 </subviews>
                                                             </view>
+                                                            <constraints>
+                                                                <constraint firstItem="Wmp-m0-0IT" firstAttribute="leading" secondItem="YG2-tO-HoN" secondAttribute="leading" id="DWe-vC-OCQ"/>
+                                                                <constraint firstItem="Wmp-m0-0IT" firstAttribute="top" secondItem="YG2-tO-HoN" secondAttribute="top" constant="-11" id="Mzz-wp-Ywy"/>
+                                                                <constraint firstItem="HJV-1j-l5j" firstAttribute="leading" secondItem="YG2-tO-HoN" secondAttribute="leading" id="RQb-bY-ana"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Wmp-m0-0IT" secondAttribute="trailing" id="eCP-Uo-AQQ"/>
+                                                                <constraint firstAttribute="bottom" secondItem="HJV-1j-l5j" secondAttribute="bottom" id="eUX-9n-IeF"/>
+                                                                <constraint firstItem="HJV-1j-l5j" firstAttribute="top" secondItem="YG2-tO-HoN" secondAttribute="top" constant="29" id="jsJ-Iz-63c"/>
+                                                                <constraint firstAttribute="trailing" secondItem="HJV-1j-l5j" secondAttribute="trailing" id="smx-cD-MWW"/>
+                                                                <constraint firstAttribute="bottom" secondItem="Wmp-m0-0IT" secondAttribute="bottom" constant="171" id="zo2-rJ-c79"/>
+                                                            </constraints>
                                                         </collectionViewCell>
                                                     </cells>
                                                     <connections>
@@ -72,6 +78,12 @@
                                                     </connections>
                                                 </collectionView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="kpu-gQ-8yF" firstAttribute="leading" secondItem="h6D-ay-Egu" secondAttribute="leading" id="6UJ-na-Bqx"/>
+                                                <constraint firstItem="kpu-gQ-8yF" firstAttribute="top" secondItem="h6D-ay-Egu" secondAttribute="top" id="VQS-eT-POR"/>
+                                                <constraint firstAttribute="trailing" secondItem="kpu-gQ-8yF" secondAttribute="trailing" id="cHc-Ci-g1B"/>
+                                                <constraint firstAttribute="bottom" secondItem="kpu-gQ-8yF" secondAttribute="bottom" id="zWe-gX-TSy"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="collection" destination="kpu-gQ-8yF" id="z9s-xg-MzZ"/>
@@ -85,6 +97,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rPj-rj-ZY1" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5g6-ro-yjz"/>
+                            <constraint firstAttribute="trailing" secondItem="rPj-rj-ZY1" secondAttribute="trailing" id="DaA-QZ-Jmh"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rPj-rj-ZY1" secondAttribute="bottom" id="b6Q-9c-Dav"/>
+                            <constraint firstItem="rPj-rj-ZY1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mmG-2R-OBS"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Esr-Ci-Dwd"/>
                     <connections>
@@ -100,7 +118,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JkH-P3-9os" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="A9O-eg-ZVP">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="A9O-eg-ZVP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
